k8s/disciplines/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disciplines-deployment
spec:
  replicas: 1                         # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: disciplines                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: disciplines               # мітка Pod по якому вона буде зв'язана з Deployment та Service


    spec:
      containers:
        - image: hurmaze/disciplines:latest     # образ Docker
          imagePullPolicy: Never      # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: disciplines           # ім'я контейнеру
          ports:
            - containerPort: 80     # порт по якому можна звертатись до поди
