k8s/disciplines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faculties-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/faculties
            pathType: "Prefix"
            backend:
              service:
                name: faculties-service
                port:
                  number: 80
